[package]
name = "falcon-cli"
version = "0.2.0"
description = "Efficiently develop fully featured CLI apps."
edition = "2024"
authors = ["Aquila Labs"]
homepage = "https://cicero.sh/"
keywords = ["cli", "command-line", "terminal", "interactive"]
categories = ["parsing-tools"] 
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mdizak/rust-falcon-cli"

[lib]
name = "falcon_cli"

[features]
default = []
log = ["dep:log"]

[profile.release]
strip="symbols"
debug=false
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"


[dependencies]
anyhow = "1.0.100"
indexmap = { version = "2.7.1", features = ["serde"] }
log = { version = "0.4.28", optional = true }
rpassword = "7.2.0"
strsim = "0.10.0"
textwrap = "0.16.0"
url = "2.5.7"
zxcvbn = "2.2.2"


